--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,20 @@
     "name": "Turbo Levo Dashboard",
     "short_name": "Turbo Levo",
     "description": "Dashboard per Specialized Turbo Levo",
-    "start_url": "/index.html",
+    "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#1e1e1e",
     "theme_color": "#1e1e1e",
     "orientation": "landscape",
     "icons": [
         {
-            "src": "icons/icon-192x192.png",
+            "src": "./icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "icons/icon-512x512.png",
+            "src": "./icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
